@@ -22,9 +22,11 @@ $pcrd->create_daemon(
 	},
 );
 
-$pcrd->{pcrd}->module('System')->feature('time')->{execute_hook} = sub {
-	$hook_ran = [@_];
-};
+$pcrd->{pcrd}->module('System')->feature('time')->add_execute_hook(
+	sub {
+		$hook_ran = [@_];
+	}
+);
 
 $pcrd->add_test_timer(
 	IO::Async::Timer::Periodic->new(
